Creacion del formulario de contacto

--- a/Index.html
+++ b/Index.html
@@ -85,5 +85,16 @@
 
         </table>
     </div>
+    <div class="Formu">
+        <h1>Formulario</h1>
+        <form action>
+            <input type="text" placeholder="Nombre">
+            <input type="text" placeholder="Descripcion">
+            <input type="email" placeholder="Correo">
+            <button type="submit">Enviar Informacion</button>
+        </form>
+
+    </div>
+
 </body>
 </html>
